k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
  labels:
    app: $SERVICE_NAME
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3100
  selector:
    app: $SERVICE_NAME
    tier: web
